src/objects/LeanData__Potential_Match__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account_1_Name__c</fullName>
        <label>Account 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Potential Match 1s</relationshipLabel>
        <relationshipName>Potential_Match_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_2_Name__c</fullName>
        <label>Account 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Potential Match 2s</relationshipLabel>
        <relationshipName>Potential_Match_2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Match 1s</relationshipLabel>
        <relationshipName>Potential_Match_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Match 2s</relationshipLabel>
        <relationshipName>Potential_Match_2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Job_Id__c</fullName>
        <label>Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead 1</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Potential Match 1s</relationshipLabel>
        <relationshipName>Potential_Match_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead 2</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Potential Match 2s</relationshipLabel>
        <relationshipName>Potential_Match_2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_1_Id__c</fullName>
        <label>Object 1 Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_1_Type__c</fullName>
        <label>Object 1 Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_2_Id__c</fullName>
        <label>Object 2 Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_2_Type__c</fullName>
        <label>Object 2 Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Potential Match</label>
    <listViews>
        <fullName>LeanData__All_Potential_Marketing_Lead_Matches</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Job_Id__c</columns>
        <columns>LeanData__Match_Type__c</columns>
        <columns>LeanData__Object_1_Id__c</columns>
        <columns>LeanData__Object_1_Type__c</columns>
        <columns>LeanData__Object_2_Id__c</columns>
        <columns>LeanData__Object_2_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LeanData__Account_1_Name__c</columns>
        <columns>LeanData__Account_2_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeanData__Object_1_Type__c</field>
            <operation>equals</operation>
            <value>MktgLead</value>
        </filters>
        <label>All Potential Marketing Lead Matches</label>
    </listViews>
    <listViews>
        <fullName>LeanData__Today</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Account_1_Name__c</columns>
        <columns>LeanData__Account_2_Name__c</columns>
        <columns>LeanData__Job_Id__c</columns>
        <columns>LeanData__Match_Type__c</columns>
        <columns>LeanData__Object_1_Id__c</columns>
        <columns>LeanData__Object_1_Type__c</columns>
        <columns>LeanData__Object_2_Id__c</columns>
        <columns>LeanData__Object_2_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Potential Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>